@@ -12,6 +12,8 @@ miscellaneous-1.X.X   Release Date: 201X-XX-XX  Release Manager:
  ** units is now able to perform non-linear unit conversions such as conversion
     between Fahrenheit and Celsius.
 
+ ** The function `asci' has been renamed `ascii'.
+
 ===============================================================================
 miscellaneous-1.2.0   Release Date: 2012-10-16  Release Manager: Carnë Draug
 ===============================================================================
